# sypherstore

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
crates/sypher-app/: Cargo.toml  README.md
crates/sypher-app/assets/: active_window.js  sypherstore.service
crates/sypher-app/src/: cli.rs  commands.rs  daemon.rs  doctor.rs  hotkey.rs  logging.rs  main.rs  paste.rs  pin.rs  state.rs
crates/sypher-app/src/browser/: kwin.rs  mod.rs  url.rs
crates/sypher-app/src/hw/: fido.rs  mod.rs  tpm.rs
crates/sypher-app/src/ui/: editor.rs  mod.rs  popup.rs  shell.rs
crates/sypher-core/: Cargo.toml  README.md
crates/sypher-core/src/: config.rs  lib.rs  mock_hw.rs  model.rs  secure.rs
crates/sypher-core/src/crypto/: envelope.rs  keys.rs  mod.rs
crates/sypher-core/src/search/: domain.rs  fuzzy.rs  mod.rs
crates/sypher-core/src/vault/: backup.rs  db.rs  mod.rs  paths.rs  recovery.rs  session.rs
